adapt year 2019